--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,9 @@ body {
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: blueviolet;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .circle {
@@ -27,12 +27,15 @@ body {
   height: 25px;
   background-color: red;
   border-radius: 50%;
+  position: absolute;
+  z-index: 2;
 }
 
 .start {
   z-index: 1;
   justify-content: center;
-  background-color: blue;
+  position: absolute;
+  top: 43%;
 }
 
 /* body {
